Идёт работа над главой 3

--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -289,7 +289,7 @@
         \includegraphics[width=0.95\linewidth]{fittingProcessing3e7} \\ б)
     \end{minipage}
     \vspace{5mm}
-    \caption{ Пример работы алгоритма при обработке сигнала с загрузкой $10^7$~с${}^{-1}$~(а) и $3 \times 10^7$~с${}^{-1}$~(б). Красной линией обозначен модельный сигнал. Зелёным показан результат обработки сигнала с помощью алгоритма: импульсы, для которых $R/(E-B)<R^{max}$ и которые считаются успешно разобранными, представлены в виде единичных импульсов, а для импульсов, где $R/(E-B)>R^{max}$, на рисунке нарисован прямоугольник. Синим показан результат операции $z + \sum A_j p(t - t_j)$, то есть это такой сигнал, который соответствует разобранным импульсам; аналогично, для неразрешённых импульсов нарисован прямоугольник.~\cite{Khilkevitch2020}. }
+    \caption{ Пример работы алгоритма фиттинга при обработке сигнала с загрузкой $10^7$~с${}^{-1}$~(а) и $3 \times 10^7$~с${}^{-1}$~(б). Красной линией обозначен модельный сигнал. Зелёным показан результат обработки сигнала с помощью алгоритма: импульсы, для которых $R/(E-B)<R^{max}$ и которые считаются успешно разобранными, представлены в виде единичных импульсов, а для импульсов, где $R/(E-B)>R^{max}$, на рисунке нарисован прямоугольник. Синим показан результат операции $z + \sum A_j p(t - t_j)$, то есть это такой сигнал, который соответствует разобранным импульсам; аналогично, для неразрешённых импульсов нарисован прямоугольник.~\cite{Khilkevitch2020}. }
     \label{fig:FittingProcessing}
 \end{figure}
 
@@ -300,7 +300,7 @@
 Методы деконволюции можно использовать для разделения сильно наложенных импульсов. Сигнал может быть представлен в виде свертки множества дельта-функций с ядром свертки, представляющим собой форму одиночного импульса: 
 \begin{equation}
   \label{eq:SignalAsConvolution}
-  s(t) = \int \limits_{-\infty}^{+\infty} p( t' - t ) \sum \limits_{i=0}{L} A_j \cdot \delta(t' - t_i) dt' + n(t)
+  s(t) = \int \limits_{-\infty}^{+\infty} p( t' - t ) \sum \limits_{i=0}^{L} A_j \cdot \delta(t' - t_i) dt' + n(t)
 \end{equation}
 где $L$ --- количество гамма-событий. В дискретной форме, если пренебречь шумовой составляющей $n(t)$, это выражение приблизительно переписать как 
 \begin{equation}
@@ -318,13 +318,17 @@
 \end{equation*}
 где $k$ --- номер итерации, $\widetilde{S} = P^{T} \cdot S $, $\widetilde{P} = P^{T} \cdot P$, $N$ --- размер квадратной матрицы $P$ и вектора $A$.
 
-В качестве начального условия можно выбирать значение сигналоа $A_i^0 = s_i$. Для обработки сигналов число итераций алгоритма можно сделать фиксированным, и равным некоторому значению, подбираемым опытным путем (например, 100~итераций). В процессе деконволюции для ускорения сходимости алгоритма через каждые несколько (например, 30) итераций можно проводить преобразование вида $A_i^k = \left( A_i^k \right)^g$, где значение степени $g$ --- параметр алгоритма, оно должно быть равным или чуть больше 1.0 (например, 1.05)~\cite{Morhac2011, Khilkevitch2020}.
+В качестве начального условия можно выбирать значение сигнала $A_i^0 = s_i$. Для обработки сигналов число итераций алгоритма можно сделать фиксированным, и равным некоторому значению, подбираемым опытным путем (например, 100~итераций). В процессе деконволюции для ускорения сходимости алгоритма через каждые несколько (например, 30) итераций можно проводить преобразование вида 
+\begin{equation*}
+  A_i^k = \left( A_i^k \right)^{\beta}
+\end{equation*}
+где значение степени $\beta$ --- параметр алгоритма, он должен быть равным или чуть больше 1.0 (например, 1.05)~\cite{Morhac2011, Khilkevitch2020}.
 
-На практике решение полного уравнения для всего сигнала целиком невозможно из-за чрезмерно большой размерности задачи, которая часто превышает $10^9$. Однако, поскольку функция отклика убывает, можно рассматривать за раз не весь сигнал целиком, а отдельные фрагменты сигнала, где его значение превышает порог $r$, и проводить деконволюцию только участков $\left[ B_j \ldots E_j \right] $. 
+На практике решение полного уравнения для всего сигнала целиком невозможно из-за чрезмерно большой размерности задачи, которая часто превышает $10^9$. Однако, поскольку функция отклика убывает, можно рассматривать за раз не весь сигнал целиком, а отдельные фрагменты сигнала, где его значение превышает порог $r$, и проводить деконволюцию только участков $\left[ B_j \ldots E_j \right] $.~\cite{Khilkevitch2020} 
 
 После деконволюции сигнала со значительным уровнем шума результатом является вектор $A$, в котором значения элементов часто не полностью соответствуют ожидаемым значениям: есть пики, не соответствующие никаким импульсам, которые возникли из-за шума исходного сигнала; но при этом одному реальному событию часто соответствует несколько соседних элементов вектора. Для получения амплитуд событий проводится суммирование групп соседних ненулевых значений вектора $A$. Все события меньше некоторого порога $r_A$ отбрасываются.
 
-После вычисления амплитуд импульсов в интервале вычисляется невязка $R$. Если невязка больше определенного порогового значения $R^{max}$, то, как и в описанных выше алгортимах, можно считать что время и амплитуда событий на интервале были определены некорректно. В этом случае для коррекции спектра с учётом неразрешенных событий можно применить ту же процедуру, что и для методов фиттинга и суммирования.
+После вычисления амплитуд импульсов в интервале вычисляется невязка $R$. Если невязка больше определенного порогового значения $R^{max}$, то, как и в описанных выше алгортимах, можно считать что время и амплитуда событий на интервале были определены некорректно. В этом случае для коррекции спектра с учётом неразрешенных событий можно применить ту же процедуру, что и для методов фиттинга и суммирования.~\cite{Khilkevitch2020}
 
 Пример работы алгоритма показан на рисунке~\ref{fig:DeconvProcessing}.
 
@@ -337,13 +341,13 @@
         \includegraphics[width=0.95\linewidth]{deconvProcessing3e7} \\ б)
     \end{minipage}
     \vspace{5mm}
-    \caption{ Пример работы алгоритма при обработке сигнала с загрузкой $10^7$~с${}^{-1}$~(а) и $3 \times 10^7$~с${}^{-1}$~(б). Красной линией обозначен модельный сигнал. Зелёным показан результат обработки сигнала с помощью алгоритма: импульсы, для которых $R/(E-B)<R^{max}$ и которые считаются успешно разобранными, представлены в виде единичных импульсов, а для импульсов, где $R/(E-B)>R^{max}$, на рисунке нарисован прямоугольник. Синим показан результат операции $z + \sum A_j p(t - t_j)$, то есть это такой сигнал, который соответствует разобранным импульсам; аналогично, для неразрешённых импульсов нарисован прямоугольник.~\cite{Khilkevitch2020}. }
+    \caption{ Пример работы алгоритма деконволюции при обработке сигнала с загрузкой $10^7$~с${}^{-1}$~(а) и $3 \times 10^7$~с${}^{-1}$~(б). Красной линией обозначен модельный сигнал. Зелёным показан результат обработки сигнала с помощью алгоритма: импульсы, для которых $R/(E-B)<R^{max}$ и которые считаются успешно разобранными, представлены в виде единичных импульсов, а для импульсов, где $R/(E-B)>R^{max}$, на рисунке нарисован прямоугольник. Синим показан результат операции $z + \sum A_j p(t - t_j)$, то есть это такой сигнал, который соответствует разобранным импульсам; аналогично, для неразрешённых импульсов нарисован прямоугольник.~\cite{Khilkevitch2020}. }
     \label{fig:DeconvProcessing}
 \end{figure}
 
 % ----------------------------------------------------------
 
-\subsection{Сравнение методов обрабоки сигнала}
+\subsection{Сравнение методов обработки сигнала}
 
 Сравнение методов, описанных выше, для различных значений загрузки детектора, представлено на рисунках~\ref{fig:processingTotalCountRate},  \ref{fig:processingByWindowCountRate}, \ref{fig:processingByWindowFwhm}, \ref{fig:processingSpectrumCmpByMethods}, \ref{fig:processingSpectrumCmpByCountRate}. 
 
@@ -446,7 +450,7 @@
   \label{fig:processingCycloSignal}
 \end{figure}
 
-Результаты измерений представлены на рисунке~\ref{fig:processingCycloSignal}. Полная ширина на полувысоте (FWHM) пика 4.44~МэВ, полученная после обработки сигнала при максимальной нагрузке различными методами, представлена в таблице~\ref{tab:processingCycloSignal}. Видно что методы фиттинга и деконволюции имеют лучшее разрешение. Следует отметить, что линия 4.44~МэВ от реакции ${}^9Be(\alpha,n\gamma){}^{12}C$ уширена за счет эффекта Доплера. Доплеровская ширина линии для толстой бериллиевой мишени и пучка альфа-частиц с энергией 6~МэВ, ускоренного циклотроном, составляет примерно 51~кэВ.
+Результаты измерений представлены на рисунке~\ref{fig:processingCycloSignal}. Полная ширина на полувысоте (FWHM) пика 4.44~МэВ, полученная после обработки сигнала при максимальной нагрузке различными методами, представлена в таблице~\ref{tab:processingCycloSignal}. Видно что методы фиттинга и деконволюции имеют лучшее разрешение. Следует отметить, что линия 4.44~МэВ от реакции ${}^9Be(\alpha,n\gamma){}^{12}C$ уширена за счет эффекта Доплера. Доплеровская ширина линии для толстой бериллиевой мишени и пучка альфа-частиц с энергией 6~МэВ, ускоренного циклотроном, составляет примерно 51~кэВ.~\cite{Khilkevitch2020}
 
 \begin{table} [htbp]
     \centering
@@ -468,6 +472,21 @@
 
 С учетом эффекта Доплера рассчитанное энергетическое разрешение для линии 662~кэВ составило примерно 4.5\%. Однако следует отметить, что при таких нагрузках становится существенным эффект насыщения ФЭУ.
 
-% ----------------------------------------------------------
+% ==========================================================
+
+\FloatBarrier
+\section{Выводы к главе 2}
+
+Рассмотрено несколько алгоритмов обработки сигналов для сцинтилляционных детекторов. Их характеристики были изучены как для смоделированных сигналов, так и для сигналов реальных детекторов.
+
+Большое внимание уделялось определению фонового уровня в условиях высокой скорости счета. Несколько алгоритмов определения нулевой линии (по среднему, по медиане, среднее значение по выборке и среднее значение по выборке плоских участков сигнала) были оценены и протестированы с использованием модельных сигналов. Определение среднего или медианного значения не позволяло адекватно получить базовые значения при нагрузках $3 \times 10^6$~с${}^{-1}$ и выше. При нагрузке до $2 \times 10^7$~с${}^{-1}$ наилучшие результаты были получены при использовании алгоритма <<среднее значение по выборке плоских участков сигнала>>. При более высоких нагрузках ошибки определения нулевой линии начинают резко возрастать для всех алгоритмов.
+
+Рассмотрены два алгоритма, основанные на процедурах фиттинга и деконволюции, позволяющие обрабатывать сигналы сцинтилляционных детекторов гамма-излучения при высоких нагрузках с разделением наложенных импульсов. Эти алгоритмы изучались с использованием тестовых модельных сигналов и сравнивались друг с другом и с двумя менее сложными алгоритмами: по максимальному значению сигнала и по интегралу импульса.
+
+Простейший алгоритм определения максимальной амплитуды пика работоспособен при нагрузках до $1 \times 10^6$~с${}^{-1}$ для детектора LaBr3(Ce). При более высоких скоростях счета увеличивается количество накопленных импульсов, поэтому требуются более совершенные алгоритмы. Показана возможность эффективной обработки сигналов детектора с применением алгоритмов фиттинга и деконволюции при нагрузках $10^7$~с${}^{-1}$ и выше. При этих нагрузках погрешность определения потока не превышает 15\% как с использованием алгоритмов фиттинга, так и алгоритма деконволюции, а разрешение пика 8~МэВ составляет 0.101~МэВ (при обработке методом фиттинга). Наилучшие результаты по количеству разрешенных событий и энергетическому разрешению при скоростях счета до $2 \times 10^6$~с${}^{-1}$ через детектор LaBr3(Ce) показал метод фиттинга. Метод деконволюции с коррекцией неразрешенных импульсов предпочтительнее при более высоких нагрузках.
+
+Описанные алгоритмы были реализованы в коде <<DeGaSum>> и в настоящее время используются для обработки диагностических сигналов гамма-излучения на токамаках FT-2, Туман-3М, Глобус-М, ASDEX-Upgrade и JET. Время работы алгоритмов также сравнивалось. Сложные алгоритмы требуют гораздо больше времени для обработки сигнала, чем менее сложные алгоритмы. Время их обработки также зависит от загрузки детектора. При нагрузке $10^7$~с${}^{-1}$ алгоритм подбора требует в 2.2 раза больше времени для обработки сигналов, чем менее сложные алгоритмы максимума, а алгоритм деконволюции занимает в 300 раз больше времени. Исследована способность алгоритмов обрабатывать реальный сигнал детектора на основе кристаллов LaBr3(Ce). При загрузке $5.1 \times 10^6$~с${}^{-1}$ метод деконволюции продемонстрировал наилучшее разрешение.~\cite{Khilkevitch2020}
+
+С помощью этих методов успешно обрабатывались сигналы гамма-спектрометров на токамаках ФТ-2, Туман-3М, Глобус-М, ASDEX-Upgrade, JET. Во время измерения регистрировалась форма сигнала на протяжении всего разряда. После завершения измерения сигнал обрабатывался в автономном режиме с использованием оптимальных параметров обработки. Онлайн-обработка, как правило, в экспериментах такого типа не требуется. Результаты обработки сигналов с помощью кода <<DeGaSum>> использовались в работах \cite{Shevelev2016,Shevelev2017,Shevelev2018,Chugunov2011,Shevelev2013} и других.
 
 \FloatBarrier
