--- a/Dissertation/part5.tex
+++ b/Dissertation/part5.tex
@@ -1,3 +1,4 @@
-\chapter{Диагоностика убегающих электронов на токамаке JET}\label{ch:ch5}
+\chapter{Диагоностика убегающих электронов на токамаке JET}
+\label{ch:ch5}
 
 \clearpage
