--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -349,7 +349,7 @@
   url = {https://link.aps.org/doi/10.1103/PhysRev.115.238}
 }
 
-@BOOK{Golant1977,
+@book{Golant1977,
   author = { Голант, В. Е. and Жилинский, А. П. and Сахаров, И. Е.},
   address = {Москва},
   publisher = {Атомиздат},
@@ -690,16 +690,198 @@
 }
   
 @article{Lemberg1987,
-	author = {И. Х. Лемберг and В. О. Найденов and В. Я. Френкель},
-	title = {Циклотрон Физико-технического института им. А. Ф. Иоффе АН СССР (К 40-летию со дня пуска)},
-	publisher = {Успехи физических наук},
-	year = {1987},
-	journal = {Усп. физ. наук},
-	volume = {153},
-	number = {11},
-	pages = {497-519},
-	url = {https://ufn.ru/ru/articles/1987/11/e/},
-	doi = {10.3367/UFNr.0153.198711e.0497}
+  author = {И. Х. Лемберг and В. О. Найденов and В. Я. Френкель},
+  title = {Циклотрон Физико-технического института им. А. Ф. Иоффе АН СССР (К 40-летию со дня пуска)},
+  publisher = {Успехи физических наук},
+  year = {1987},
+  journal = {Усп. физ. наук},
+  volume = {153},
+  number = {11},
+  pages = {497-519},
+  url = {https://ufn.ru/ru/articles/1987/11/e/},
+  doi = {10.3367/UFNr.0153.198711e.0497}
+}
+
+
+@article{Meng2000,
+  author={Meng, L.J. and Ramsden, D.},
+  title={An inter-comparison of three spectral-deconvolution algorithms for gamma-ray spectroscopy}, 
+  journal={IEEE Transactions on Nuclear Science}, 
+  year = {2000},
+  volume = {47},
+  number = {4},
+  pages = {1329-1336},
+  doi = {10.1109/23.872973}
+}
+
+
+@article{Lanteri1999,
+  author = {{Lant\'eri, H.} and {Soummer, R.} and {Aime, C.}},
+  title = {Comparison between ISRA and RLA algorithms. Use of a Wiener Filter based stopping criterion},
+  DOI= "10.1051/aas:1999420",
+  url= "https://doi.org/10.1051/aas:1999420",
+  journal = {Astron. Astrophys. Suppl. Ser.},
+  year = 1999,
+  volume = 140,
+  number = 2,
+  pages = { 235-246 }
+}
+
+@article{JungRichardt2016,
+  author = "Jung-Richardt, Ira",
+  title = "{Deconvolution of very high-energy-gamma-ray image with the Richardson-Lucy algorithm }",
+  doi = "10.22323/1.236.0804",
+  journal = "PoS",
+  year = 2016,
+  volume = "ICRC2015",
+  pages = "804"
+}
+
+@article{Vardi1985,
+  ISSN = {01621459},
+  URL = {http://www.jstor.org/stable/2288030},
+  author = {Y. Vardi and L. A. Shepp and L. Kaufman},
+  journal = {Journal of the American Statistical Association},
+  number = {389},
+  pages = {8--20},
+  publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+  title = {A Statistical Model for Positron Emission Tomography},
+  volume = {80},
+  year = {1985}
+}
+
+@article{Raad2008,
+  doi = {10.1088/0957-0233/19/6/065601},
+  url = {https://doi.org/10.1088/0957-0233/19/6/065601},
+  year = 2008,
+  month = {5},
+  publisher = {{IOP} Publishing},
+  volume = {19},
+  number = {6},
+  pages = {065601},
+  author = {Muhammad W Raad and Mohamed Deriche and James Noras and Muhammad Shafiq},
+  title = {A novel approach for pileup detection in gamma-ray spectroscopy using deconvolution},
+  journal = {Measurement Science and Technology}
+}
+
+@ARTICLE{Jeffrey1986,
+  author = {{Jeffrey}, W. and {Rosner}, R.},
+  title = {On Strategies for Inverting Remote Sensing Data},
+  journal = {Astrophysical Journal},
+  keywords = {Helioseismology, Image Reconstruction, Inversions, Remote Sensing, Solar Oscillations, Data Processing, Image Resolution, Iterative Solution, Maximum Entropy Method, Solar Rotation, Astronomy, NUMERICAL METHODS, SUN: OSCILLATIONS},
+  year = 1986,
+  month = {11},
+  volume = {310},
+  pages = {463},
+  doi = {10.1086/164699},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1986ApJ...310..463J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Bouchet1995,
+  author = {{Bouchet}, L.},
+  title = {A comparative study of deconvolution methods for gamma-ray spectra.},
+  journal = {Astronomy and Astrophysics Supplement},
+  keywords = {GAMMA RAYS: OBSERVATIONS, X-RAYS: GENERAL, METHODS: DATA ANALYSIS},
+  year = 1995,
+  month = {10},
+  volume = {113},
+  pages = {167},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1995A\&AS..113..167B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{Richardson1972,
+  author = {William Hadley Richardson},
+  journal = {J. Opt. Soc. Am.},
+  keywords = {Arrays; Deconvolution; Image processing; Point spread function},
+  number = {1},
+  pages = {55--59},
+  publisher = {OSA},
+  title = {Bayesian-Based Iterative Method of Image Restoration$\ast$},
+  volume = {62},
+  month = {1},
+  year = {1972},
+  url = {http://opg.optica.org/abstract.cfm?URI=josa-62-1-55},
+  doi = {10.1364/JOSA.62.000055}
+}
+
+
+@ARTICLE{Lucy1974,
+  author = {{Lucy}, L.~B.},
+  title = {An iterative technique for the rectification of observed distributions},
+  journal = {Astronomical Journal},
+  year = 1974,
+  month = {6},
+  volume = {79},
+  pages = {745},
+  doi = {10.1086/111605},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1974AJ.....79..745L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{Wu2009,
+  title = {CAD-based interface programs for fusion neutron transport simulation},
+  journal = {Fusion Engineering and Design},
+  volume = {84},
+  number = {7},
+  pages = {1987-1992},
+  year = {2009},
+  note = {Proceeding of the 25th Symposium on Fusion Technology},
+  issn = {0920-3796},
+  doi = {https://doi.org/10.1016/j.fusengdes.2008.12.041},
+  url = {https://www.sciencedirect.com/science/article/pii/S0920379608004948},
+  author = {Y. Wu},
+  keywords = {Neutronics modeling, Interface program, CAD-based simulation}
+}
+
+@techreport{Hendricks2004,
+  title={MCNPX, VERSION 2.5. e. Los Alamos National Laboratory, NM},
+  author={Hendricks, JS and McKinney, GW and Waters, LS and others},
+  year={2004},
+  institution={Report LA-UR-04-0569, 2004. 380 H. Zaidi}
+}
+
+@inproceedings{Fischer2005,
+  title={Benchmark calculations of sensitivities to secondaries’angular distributions},
+  author={Fischer, U and Kodeli, I and Perel, RL},
+  booktitle={Conference Proc. of “The Monte Carlo Method: Versatility Unbounded In A Dynamic Computing World, Chattanooga, Tennessee},
+  year={2005}
+}
+
+@article{Liskovets1982,
+  author       = {Лисковец, О. А. },
+  title        = {Теория и методы решения некорректных задач},
+  journal      = {Итоги науки и техники, математический анализ},
+  year         = {1982},
+  volume       = {20},
+  pages        = {116-178},
+  language     = {russian}
+}
+
+@article{Shirk1985,
+  author = {Shirk,Donald G.  and Hoffman,Nelson M. },
+  title = {Monte‐Carlo error analysis in x‐ray spectral deconvolution},
+  journal = {Review of Scientific Instruments},
+  volume = {56},
+  number = {5},
+  pages = {809-811},
+  year = {1985},
+  doi = {10.1063/1.1138180},
+  URL = { https://doi.org/10.1063/1.1138180},
+  eprint = { https://doi.org/10.1063/1.1138180 }
+}
+
+@book{Kuznetsov1974,
+  author = { Кузнецов, Р. А.},
+  address = {Москва},
+  publisher = {Атомиздат},
+  title = {Активационный анализ Издание 2},
+  year = {1974},
+  numpages = {344},
+  language = {russian}
 }
 
 %@ARTICLE{Article,
